# SRS_AI

./: .gitignore  2.13.0  AnalyzeModelStructure.py  AnalyzeParam.py  CIRCULAR_CONVOLUTION.md  CIRCULAR_VS_NORMAL_CONV.md  DATAFLOW_VISUALIZATION_GUIDE.md  DATAFLOW_WITH_SHAPES_GUIDE.md  EXACT_PARAM_COUNT.md  FILE_OUTPUT_GUIDE.md  FIXES_SUMMARY.md  FIX_SMALL_BASE_CHANNELS.md  HYPERPARAMETER_GUIDE.md  LOOP_EXPANSION_GUIDE.md  MATLAB_TEST_README.md  MATLAB_TEST_RESULT.md  MATLAB_importONNXFunction_GUIDE.md  MIGRATION_NUM_SUB_STAGES_TO_MLP_DEPTH.md  MODEL_ANALYSIS_GUIDE.md  MODEL_ANALYSIS_SUMMARY.md  MODEL_MIGRATION_COMPLETE.md  MODIFICATIONS_SUMMARY.md  PARAMETER_COUNT_ANALYSIS.md  PARAMETER_COUNT_EXPLANATION.md  PARAMETER_DISTRIBUTION_EXPLAINED.md  PARAM_DISTRIBUTION_QUICK_REF.md  POSITIONAL_ENCODING_N_UPDATE.md  README.md  README_CPU_ONLY.md  README_DEVICE_SELECTION.md  README_DISTRIBUTED.md  README_NUMA_OPTIMIZATION.md  README_SINGLE_NUMA_TEST.md  README_SRS_TIMING_ESTIMATION.md  README_h_with_residual.md  READY_FOR_MATLAB_TEST.md  RunTraditionalMMSE.py  SHAPE_ANNOTATION_FIX.md  SHAPE_INTEGRATION_TO_DATAFLOW.md  TENSOR_SHAPES_IN_DATAFLOW.md  (+92 more)
.github/: copilot-instructions.md
Model_AIIC/: COMPLEXITY_GUIDE.md  COMPLEXITY_QUICKREF.md  COMPLEXITY_SUMMARY.md  CPU_RATIO_GUIDE.md  EVALUATION_GUIDE.md  EVALUATION_QUICKREF.md  EVALUATION_SUMMARY.md  INTEGRATION_GUIDE.md  LOCAL_SERVER_GUIDE.md  PARAM_DISPLAY_FEATURE.md  PARAM_DISPLAY_QUICKREF.md  PLOT_COMMANDS_QUICKREF.md  QUICKSTART.md  README.md  README_UPDATE_2025-12-04.md  TIMING_OFFSET_GUIDE.md  UPDATE_SUMMARY.md  WEIGHT_SHARING_TRUTH.md  analyze_complexity.py  channel_models.py  channel_separator.py  (+8 more)
(+673 files in other folders)
