[project]
name = "srs-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.0.0",
    "jupyterlab>=3.4.0",
    "matplotlib>=3.5.0",
    "notebook>=7.4.7",
    "numpy>=1.21.0",
    "omegaconf>=2.3.0",
    "pandas>=1.3.0",
    "psutil>=5.8.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyyaml>=6.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "sionna>=0.14.0",
    "tensorboard>=2.8.0",
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.62.0",
    "wandb>=0.12.0",
]
