[project]
name = "srs-ai"
version = "0.1.0"
description = "SRS AI Channel Estimation"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "ipywidgets==8.0.4",
    "jupyterlab==4.2.5",
    "matplotlib==3.9.2",
    "notebook==7.2.2",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "pandas==2.2.3",
    "psutil==6.1.0",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pyyaml==6.0.2",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "sionna==0.17.0",
    "tensorboard==2.15.0",
    "tensorflow-cpu==2.15.0",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchvision==0.16.2",
    "tqdm==4.67.1",
    "wandb==0.18.7",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["Model_AIIC*"]
exclude = ["tests*", "docs*", "checkpoints*", "analysis_reports*", "Unused*", "Unet*", "SystemEnvironment*"]
